[package]
description = "Created with Anchor"
edition = "2018"
name = "polymarket_skate"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "polymarket_skate"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
